backend/api/tests/integration/snapshots/integration__jig__browse_order_by-1.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "jigs": [
    {
      "id": "0cc084bc-7c83-11eb-9f77-e3218dffb008",
      "publishedAt": "2022-06-24T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "jigData": {
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "[last_edited]",
        "draftOrLive": "draft",
        "displayName": "name",
        "modules": [
          {
            "id": "a6b24a06-1dd7-11ec-8426-635a3a7ea572",
            "stable_id": "0fb3d582-c5f7-11ee-95d6-ab330329b0df",
            "kind": "Cover",
            "is_complete": false
          },
          {
            "id": "a6b24a42-1dd7-11ec-8426-a7165f9281a2",
            "stable_id": "b3dab748-c5f7-11ee-9d68-3f6401083bda",
            "kind": "Flashcards",
            "is_complete": false
          },
          {
            "id": "a6b24a88-1dd7-11ec-8426-57525d09b22c",
            "stable_id": "05bbfd70-c5f7-11ee-b82b-c7e4a4a93e66",
            "kind": "Memory",
            "is_complete": false
          }
        ],
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "additionalResources": [
          {
            "id": "286b834a-1dd9-11ec-8426-6f641a50e23f",
            "displayName": "link test",
            "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
            "link": "url://url.url.url/urls/s"
          },
          {
            "id": "286b8390-1dd9-11ec-8426-fbeb80c504d9",
            "displayName": "link test",
            "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
            "link": "url://url.url.url/url/s"
          }
        ],
        "description": "test description",
        "defaultPlayerSettings": {
          "direction": "ltr",
          "scoring": true,
          "dragAssist": true
        },
        "theme": "Blank",
        "audioBackground": null,
        "audioEffects": {
          "feedbackPositive": "[audio]",
          "feedbackNegative": "[audio]"
        },
        "privacyLevel": "unlisted",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {}
      },
      "isLiked": false,
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false,
        "premium": false
      }
    },
    {
      "id": "19becb2b-bff7-4c1b-bb2c-16f2e098d3d3",
      "publishedAt": "2022-06-22T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "jigData": {
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "[last_edited]",
        "draftOrLive": "draft",
        "displayName": "name",
        "modules": [
          {
            "id": "56841805-d762-478b-8f07-e263917058b9",
            "stable_id": "b415f5f6-c5f7-11ee-9569-53a033ff93b8",
            "kind": "Cover",
            "is_complete": true
          }
        ],
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "additionalResources": [],
        "description": "test description",
        "defaultPlayerSettings": {
          "direction": "ltr",
          "scoring": true,
          "dragAssist": true
        },
        "theme": "Blank",
        "audioBackground": null,
        "audioEffects": {
          "feedbackPositive": "[audio]",
          "feedbackNegative": "[audio]"
        },
        "privacyLevel": "unlisted",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {}
      },
      "isLiked": false,
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false,
        "premium": false
      }
    },
    {
      "id": "3a71522a-cd77-11eb-8dc1-af3e35f7c743",
      "publishedAt": "2022-06-23T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "jigData": {
        "createdAt": "2021-03-06T00:46:26.134651Z",
        "lastEdited": "[last_edited]",
        "draftOrLive": "draft",
        "displayName": "draft name",
        "modules": [],
        "ageRanges": [],
        "affiliations": [],
        "language": "he",
        "categories": [],
        "additionalResources": [],
        "description": "draft test description",
        "defaultPlayerSettings": {
          "direction": "rtl",
          "scoring": false,
          "dragAssist": false
        },
        "theme": "Jigzi",
        "audioBackground": "funForKids",
        "audioEffects": {
          "feedbackPositive": "[audio]",
          "feedbackNegative": "[audio]"
        },
        "privacyLevel": "unlisted",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {}
      },
      "isLiked": false,
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false,
        "premium": false
      }
    },
    {
      "id": "3a71522a-cd77-11eb-8dc1-af3e35f7c743",
      "publishedAt": "2022-06-23T17:57:33.149359Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "jigData": {
        "createdAt": "2021-03-04T00:46:26.134651Z",
        "lastEdited": "[last_edited]",
        "draftOrLive": "live",
        "displayName": "name",
        "modules": [],
        "ageRanges": [],
        "affiliations": [],
        "language": "en",
        "categories": [],
        "additionalResources": [],
        "description": "test description",
        "defaultPlayerSettings": {
          "direction": "ltr",
          "scoring": true,
          "dragAssist": true
        },
        "theme": "Blank",
        "audioBackground": null,
        "audioEffects": {
          "feedbackPositive": "[audio]",
          "feedbackNegative": "[audio]"
        },
        "privacyLevel": "public",
        "locked": false,
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {}
      },
      "isLiked": false,
      "adminData": {
        "rating": null,
        "blocked": false,
        "curated": false,
        "premium": false
      }
    }
  ],
  "pages": 1,
  "totalJigCount": 4
}
